[package]
name = "foobar" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["..."]
edition = "2021"

[dependencies]
widestring = "0.2.2"
log = "0.4"
dll_hook = { path = "./src/lib/dll_hook" }
user32-sys = "0.2.0"

[dependencies.winapi]
version = "0.3.9"
features = [
  "winuser",
  "winbase",
  "winnt",
  "memoryapi",
  "processthreadsapi",
  "libloaderapi",
  "handleapi",
  "minwindef",
  "errhandlingapi",
  "processenv",
]
