[package]
name = "dll_hook" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["verideth"]

[lib]
crate-type = ["dylib"] # could be `staticlib` as well

[dependencies]
gcc = "0.3"
libc = "0.2"
#winapi = { version = "0.2.8", features = ["winbase", "winuser"] }
winapi = { version = "0.3.9", features = ["winbase", "winuser"] }
detour = "0.8.0"
user32-sys = "0.1"
kernel32-sys = "0.2.2"	
lazy_static = "0.2"
