[package]
name = "dll_hook" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["verideth"]
edition = "2021"

[lib]
crate-type = ["dylib"] # could be `staticlib` as well

[dependencies]
gcc = "0.3"
libc = "0.2"
detour = { version = "0.8.0", features = ["nightly"] }
user32-sys = "0.1"
kernel32-sys = "0.2.2"	
#lazy_static = "0.2"
lazy_static = "1.4.0"
iced-x86 = "1.15.0"
byteorder = "1.2.7"
winsafe = { version = "0.0.9", features = ["kernel"] }

[dependencies.winapi]
version = "0.3.9"
features = [
    "memoryapi",
    "minwindef",
    "ntdef", 
    "winuser",
    "tlhelp32",
    "psapi", 
    "securitybaseapi",
    "libloaderapi", 
    "synchapi", 
    "wow64apiset",
    "processthreadsapi", 
    "handleapi", 
    "winbase",
    "impl-default",
]
